--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-react-app": "^3.1.2"
+    "babel-preset-react-app": "^3.1.2",
+    "mermaid": "^9.0.1"
   }
 }
