--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["John Schlaak <schlaakja@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Flask = "^2.1.2"
+Flask-Cors = "^3.0.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
